Added Location Search to Trigger LatLng Coordinates Functionality

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,12 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
+    <noscript> You need to enable Javascript to run this App. </noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSaiP0qZRojgI9mRvYSpOrIg4MZsJ0f3M&callback=initMap"
+    type="text/javascript"></script>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
     <a href="/users">Go To Userpage</a>
   </body>
 </html>
+
