--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -1,3 +1,8 @@
-.Navbar {
-  
+.flexRowDiv {
+  height: 800px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
 }
