--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -9,6 +9,17 @@
   width: 90%;
 }
 
+.flexRow {
+  height: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
 .pageContainer {
   height: 800px;
   width: 90%;
