--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.mapplace {
+  margin:30;
+  height: 10;
+  width:30;
+}
+
+.this {
+
+  margin:30;
+  height: 10000;
+  width:30;
+
+}
