--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,29 @@
   width:30;
 
 }
+
+.navColour{
+  background-color: firebrick;
+}
+
+.carousel-caption p {
+  font-family:    'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size:      1em;
+  color:          black;
+  }
+
+.carousel-caption .btn{
+  scroll-behavior: smooth; 
+}
+
+/* .carousel-caption #grantButton{
+  background-color: cornflowerblue;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+} */
+
+.carousel-caption #grantCaption {
+  color: black;
+  background-color: rgba(236, 236, 236, 0.5)
+  
+}
