--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,7 +45,7 @@
 
 }
 
-<<<<<<< HEAD
+
 .navColour{
   background-color: firebrick;
 }
@@ -69,7 +69,7 @@
 .carousel-caption #grantCaption {
   color: black;
   background-color: rgba(236, 236, 236, 0.5)
-  
+}
 
 .mapplace {
   text-align: center;
