compare page updated with latest BTO details

--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -6,3 +6,11 @@
   align-content: center;
   align-items: center;
 }
+
+.flexRowBTO {
+  height: 800px;
+  width: 2000px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
