--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,8 +71,6 @@
   background-color: rgba(236, 236, 236, 0.5)
 }
 
-.mapplace {
-  text-align: center;
-  left: 50%;
-
+#locationBody{
+  padding-top: 110px;
 }
