--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,7 @@
 
 #locationInstructions{
   text-align: center;
-  background-color: coral;
+  background-color: rgba(162, 162, 190, 0.356);
   padding: 30px;
 }
 
