--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,12 +90,15 @@
   padding: 40px;
 }
 
-#map {
-  padding: 30px;
+#mapTable {
+  /* padding: 30px; */
+  margin: auto;
+  width: 70vw;
+  
 }
 
-#locationTable{
-  
+#map{
+  padding-top: 30px;
 }
 
 #BTOCaption{
