refactor grant calc and added rows for compare table

--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -15,5 +15,11 @@
   justify-content: space-evenly;
 }
 
+.flexRowCompareDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
 
 
