--- a/client/src/App.css
+++ b/client/src/App.css
@@ -208,3 +208,20 @@
 #section2{
   min-height:60vh;
 }
+
+
+.page-title{
+  font-family: "weather";
+  font-style: bold;
+  font-weight: 400;
+  padding-top:2em;
+  color:black;
+}
+
+.page-title-2{
+  font-family: "Verdana";
+  font-style: normal;
+  padding-bottom:2em;
+  font-size:16px;
+
+}
