grant front end 1

--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -6,3 +6,12 @@
   align-content: center;
   align-items: center;
 }
+
+.flexDiv {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+}
