--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -1,8 +1,8 @@
 .flexBoxDiv {
   height: 800px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
@@ -29,7 +29,13 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60px;
+  margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
 }
+
+.header {
+  position: absolute;;
+  bottom: 100;
+}
+
