--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,10 +111,10 @@
   scroll-behavior: smooth; 
 }
 
-.carousel-caption #grantCaption {
+/* .carousel-caption #grantCaption {
   color: black;
   background-color: rgba(236, 236, 236, 0.5)
-}
+} */
 
 #locationBody{
   padding-top: 70px;
@@ -233,4 +233,42 @@
 #cardtitle{
   font-family: "weather";
   font-style: bold;
+}
+
+#grantButton{
+  /* background-color: white; */
+  /* opacity:0.8; */
+  font-family: "arial";
+  padding: 15px;
+  width:400;
+  border-radius: 12px;
+
+}
+
+#locationButton{
+  /* background-color: white; */
+  /* opacity:0.8; */
+  font-family: "arial";
+  padding: 15px;
+  width:400;
+  border-radius: 12px;
+
+}
+
+#BTOCaption{
+   /* background-color: white; */
+  /* opacity:0.8; */
+  font-family: "arial";
+  padding: 15px;
+  width:400; 
+  border-radius: 12px;
+}
+
+#grantCaption{
+  font-family: "weather";
+}
+
+
+#flexRow{
+  background-color:red;
 }
