--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -1,5 +1,5 @@
 .flexRowDiv {
-  height: 55vh;
+  height: 165vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -8,11 +8,18 @@
 }
 
 .flexRowBTO {
-  height: 100vh;
+  height: 190vh;
   width: 90vw;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
+
+.flexRowPicture{
+  padding:0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap;
 }
 
 :root {
@@ -47,5 +54,19 @@
 
 .content-wrap{
   flex:1;
+}
+
+#carousel-picture{
+  filter:brightness(40%)
+}
+
+.flexRowPicture{
+  height:300;
+  width:400;
+}
+
+#comparepicture{
+  height:300px;
+  width:25vw;
 }
 
