--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -1,24 +1,28 @@
 .flexBoxDiv {
-  height: 800px;
+  height: 20px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
 }
 
 .flexRow {
-  height: 800px;
+  /* background-color: red; */
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: top;
+  padding-top:3em;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
+  height:1800px;
+  
 }
+
 
 .pageContainer {
   height: 800px;
