--- a/client/src/App.css
+++ b/client/src/App.css
@@ -234,3 +234,23 @@
   font-family: "weather";
   font-style: bold;
 }
+
+#grantForm{
+  padding-top: 150px;
+  margin: auto;
+  width: 80vw;
+}
+
+#formContent{
+  padding: 50px;
+}
+
+#formButton{
+  text-align: center;
+  margin: 30px;
+}
+
+#grantTitle{
+  text-align: center;
+  margin: 20px;
+}
