--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -15,58 +15,62 @@
   justify-content: space-evenly;
 }
 
-.flexRowPicture{
-  padding:0;
+.flexRowPicture {
+  padding: 0;
   display: flex;
   flex-direction: row;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
 :root {
   --mainDark: #343a40;
-  --mainGrey: rgba(109,109,109);
-  --mainLightGrey:rgba(172,172,172);
-  --mainWhite:#fff;
-  --mainBlue:#007bff;
-  --mainRed:firebrick;
+  --mainGrey: rgba(109, 109, 109);
+  --mainLightGrey: rgba(172, 172, 172);
+  --mainWhite: #fff;
+  --mainBlue: #007bff;
+  --mainRed: firebrick;
 }
 
-.main-footer{
-  color:white;
-  position:relative;
-  padding-top:3em;
-  bottom:0;
-  width:100%;
+.main-footer {
+  color: white;
+  position: relative;
+  padding-top: 3em;
+  bottom: 0;
+  width: 100%;
 }
 
-.container{
-  padding-bottom:60px;
+.container {
+  padding-bottom: 60px;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
 
-.page-container{
-  display:flex;
-  flex-direction:column;
-  min-height:100vh;
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.content-wrap{
-  flex:1;
+.content-wrap {
+  flex: 1;
 }
 
-#carousel-picture{
-  filter:brightness(40%)
+#carousel-picture {
+  filter: brightness(40%);
 }
 
-.flexRowPicture{
-  height:300;
-  width:400;
+.flexRowPicture {
+  height: 300;
+  width: 400;
 }
 
-#comparepicture{
-  height:300px;
-  width:25vw;
+#comparepicture {
+  height: 300px;
+  width: 25vw;
 }
 
+.formsDiv {
+  display: flex;
+  flex-direction: column;
+}
