--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -15,14 +15,12 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: top;
-  padding-top:3em;
+  padding-top: 3em;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  height:1800px;
-  
+  height: 1800px;
 }
-
 
 .pageContainer {
   height: 800px;
@@ -51,7 +49,7 @@
   outline: none;
   transition: 0.4s;
   margin-bottom: 10px;
-  box-shadow: 0 1px 1px 0 rgba(10, 16, 34, .2);
+  box-shadow: 0 1px 1px 0 rgba(10, 16, 34, 0.2);
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
   flex: 1;
@@ -61,9 +59,19 @@
 
 .FAQbox.active,
 .FAQbox:hover {
- background-color: #ddd;
+  background-color: #ddd;
 }
 
 #FAQ h1 {
-  color:red;
+  color: red;
+}
+
+.homepage {
+  height: 100vh;
+}
+
+
+#home-container {
+  position: relative;
+  min-height: 100vh;
 }
