--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white !important;
+  background-color: #EEEEEE !important;
+  background: 
+    url("./Images/skyscraper.png") bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 code {
