remove Compare overflow bar

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -7,7 +7,8 @@
     color:white; 
     background-color:blue;
     padding-top:10em;
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width:100%;
     
 }
