--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,17 @@
 body {
-  margin: 0;
+  /* margin-top:0px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white !important;
-  background: url("./Images/skyscraper.png") bottom;
+  /* background-color: white !important;
+  background: url("./Images/undraw_my_location_f9pr.svg") bottom;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: contain; */
+ 
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
