--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,12 +97,32 @@
   font-size: 45px;
   padding-top: 30px;
   margin-bottom: 30px;
+
+
 }
+
+.page-title img{
+  height:100px;
+  
+}
+
+.main{
+  background-color: white !important;
+  background: url("./Images/undraw_choosing_house_v37h.svg") bottom;
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: right;
+  background-position-y: 100%;
+  background-position-x: 85%;
+}
+
+
 
 
 .sub-title{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-top: -20px;
+
 }
 
 .bto-name{
