--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,14 +99,16 @@
   margin-bottom: 30px;
 
 
+
 }
+
 
 .page-title img{
   height:100px;
-  
+
 }
 
-.main{
+/* .main{
   background-color: white !important;
   background: url("./Images/undraw_choosing_house_v37h.svg") bottom;
   background-repeat: no-repeat;
@@ -114,7 +116,7 @@
   background-position: right;
   background-position-y: 100%;
   background-position-x: 85%;
-}
+} */
 
 
 
@@ -179,7 +181,6 @@
 #locationInstructions{
   text-align: center;
   background-color: #dddddd;
-  
   
   
 }
@@ -316,6 +317,7 @@
   font-style: bold;
 }
 
+
 #grantForm{
   padding-top: 50px;
   margin: auto;
@@ -367,6 +369,16 @@
   background-position-x: 90%;
   
 }
+
+#grantlogo{
+
+
+  background: url("./Images/undraw_wallet_aym5.svg") bottom;
+  background-repeat: no-repeat;
+ 
+
+}
+
 
 #BTOCaption{
    /* background-color: white; */
