--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,9 +49,11 @@
   position: relative;
   left: 40px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  font-weight: lighter;
+  font-size: 20px;
+  font-weight: bolder;
   color: white;
+  margin-inline-start: 60px;
+  
 }
 
 .mr-auto .tab {
@@ -72,7 +74,7 @@
 
 .logo-title{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: lighter;
+  font-weight: bolder;
   padding: 1%;
 }
 
@@ -84,6 +86,7 @@
 .Navbar{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 40px;
+  align-content: space-between;
   
 }
 
@@ -370,14 +373,6 @@
   
 }
 
-#grantlogo{
-
-
-  background: url("./Images/undraw_wallet_aym5.svg") bottom;
-  background-repeat: no-repeat;
- 
-
-}
 
 
 #BTOCaption{
