--- a/client/src/App.css
+++ b/client/src/App.css
@@ -353,7 +353,7 @@
 }
 
 #cardtitle{
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: bold;
 }
 
